# account-cooker

./: .gitignore  CLAUDE.md  Cargo.toml  EVIDENCE.md  README.md
.github/workflows/: ci.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adversary/: Cargo.toml
crates/adversary/src/: lib.rs  metric.rs  ml.rs  model.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: durable.rs  funding.rs  lib.rs  live.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: crash_recovery.rs
crates/hunter/: Cargo.toml
crates/hunter/src/: heuristics.rs  lib.rs  metric.rs  ml.rs
crates/noise-core/: Cargo.toml
crates/noise-core/src/: decoy.rs  keys.rs  lib.rs  split.rs  timing.rs  types.rs
crates/persona/: Cargo.toml
crates/persona/src/: lib.rs
personas/: market_maker.toml  retail.toml  whale.toml
scripts/: localnet-live-proof.sh
