[workspace]
resolver = "2"
members = [
    "crates/noise-core",
    "crates/persona",
    "crates/hunter",
    "crates/adapters",
    "crates/agent-runtime",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/solanabr/account-cooker"
authors = ["Curupira contributors"]

[workspace.dependencies]
# pure logic
rand = "0.10"
rand_distr = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
curve25519-dalek = "5"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# internal crates
noise-core = { path = "crates/noise-core" }
persona = { path = "crates/persona" }
hunter = { path = "crates/hunter" }
adapters = { path = "crates/adapters" }
agent-runtime = { path = "crates/agent-runtime" }

[profile.release]
lto = "thin"
