[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fleet orchestrator. Offline deterministic simulator by default; real Solana under `live`."

[features]
default = []
# Real on-chain execution against a Solana RPC. Pulls solana-sdk/solana-client.
live = ["dep:solana-sdk", "dep:solana-client", "dep:solana-system-interface"]

[dependencies]
noise-core.workspace = true
persona.workspace = true
hunter.workspace = true
adapters.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

solana-sdk = { version = "4", optional = true }
solana-client = { version = "4", optional = true }
solana-system-interface = { version = "3", optional = true }
