[package]
name = "hunter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "the adversary — adversarial chain-analysis harness that MEASURES how linkable a ledger is."

[dependencies]
noise-core.workspace = true
serde.workspace = true
serde_json.workspace = true
