[package]
name = "noise-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure privacy-through-noise primitives: value splitting, human timing, ephemeral addresses, decoys."

[dependencies]
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
curve25519-dalek.workspace = true
sha2.workspace = true
thiserror.workspace = true
