[package]
name = "persona"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Behavioral personas: what a believable human/agent does, when, and for how much."

[dependencies]
noise-core.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
toml.workspace = true
